fixed cards height inconsistencies by applying flex on the card wrapped and flex grow on the card info

--- a/src/features/dashboard/Dashboard.css
+++ b/src/features/dashboard/Dashboard.css
@@ -113,15 +113,18 @@
   place-items: center;
   align-items: stretch;
 
+  .country__card {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+
   .country__info {
     background-color: var(--element-bg);
     box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.1);
     border-radius: 0 0 5px 5px;
     padding: 1.5rem;
-
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
+    flex-grow: 1;
   }
 
   .country__flag {
@@ -156,5 +159,11 @@
 @media only screen and (min-width: 48rem) {
   .controls__row {
     padding: 2.5rem 3.5rem 2.5rem 3.5rem;
+  }
+}
+
+@media only screen and (min-width: 64rem) {
+  .countries__grid {
+    grid-template-columns: repeat(auto-fill, minmax(16.5rem, 1fr));
   }
 }
